--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
             <div id="female-wards"></div>
         </div>
     </div>
+    <div class="chart-container">
+        <canvas id="bedChangesChart"></canvas>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script>
