--- a/index.html
+++ b/index.html
@@ -43,58 +43,98 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="https://apis.google.com/js/api.js"></script>
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
 
     <script>
         var CLIENT_ID = '1058605601312-89fgoocsjd8mmdqq9vr5q1djt3o61d6f.apps.googleusercontent.com';  // Replace with your Client ID
         var API_KEY = 'AIzaSyC9YCMS5_d4E9hhPUklf58kAabJ2BFu7TM';  // Replace with your API key
         var DISCOVERY_DOCS = ["https://sheets.googleapis.com/$discovery/rest?version=v4"];
         var SCOPES = "https://www.googleapis.com/auth/spreadsheets.readonly";
+        var tokenClient;
+        var gapiInited = false;
+        var gisInited = false;
 
-        function handleClientLoad() {
-            gapi.load('client:auth2', initClient);
+        function gapiLoaded() {
+            gapi.load('client', initializeGapiClient);
         }
 
-        function initClient() {
-            gapi.client.init({
+        async function initializeGapiClient() {
+            await gapi.client.init({
                 apiKey: API_KEY,
-                clientId: CLIENT_ID,
                 discoveryDocs: DISCOVERY_DOCS,
-                scope: SCOPES
-            }).then(function () {
-                gapi.auth2.getAuthInstance().signIn().then(function() {
-                    listMajors();
+            });
+            gapiInited = true;
+            maybeEnableButtons();
+        }
+
+        function gisLoaded() {
+            tokenClient = google.accounts.oauth2.initTokenClient({
+                client_id: CLIENT_ID,
+                scope: SCOPES,
+                callback: '', // defined later
+            });
+            gisInited = true;
+            maybeEnableButtons();
+        }
+
+        function maybeEnableButtons() {
+            if (gapiInited && gisInited) {
+                document.getElementById('authorize_button').style.visibility = 'visible';
+            }
+        }
+
+        function handleAuthClick() {
+            tokenClient.callback = async (resp) => {
+                if (resp.error !== undefined) {
+                    throw (resp);
+                }
+                await listMajors();
+            };
+
+            if (gapi.client.getToken() === null) {
+                // Prompt the user to select a Google Account and authorize the application to access requested scopes.
+                tokenClient.requestAccessToken({prompt: 'consent'});
+            } else {
+                // Skip display of account chooser and consent dialog for an existing token.
+                tokenClient.requestAccessToken({prompt: ''});
+            }
+        }
+
+        async function listMajors() {
+            let response;
+            try {
+                response = await gapi.client.sheets.spreadsheets.values.get({
+                    spreadsheetId: '1j1vRt47CWTPuQy7xxUBSQeN4GJrtfLaBFc6RTRvUne4',  // Replace with your spreadsheet ID
+                    range: 'Sheet1!A2:D',
                 });
-            }, function(error) {
-                console.error(JSON.stringify(error, null, 2));
+            } catch (err) {
+                console.error(err.message);
+                return;
+            }
+            const range = response.result;
+            var maleWardsContainer = document.getElementById('male-wards');
+            var femaleWardsContainer = document.getElementById('female-wards');
+
+            maleWardsContainer.innerHTML = '';
+            femaleWardsContainer.innerHTML = '';
+
+            range.values.forEach(row => {
+                if (row[3] === 'Male') {
+                    maleWardsContainer.innerHTML += `<div class="ward">${row[0]}, ${row[2]}, ${row[1]} Beds</div>`;
+                } else if (row[3] === 'Female') {
+                    femaleWardsContainer.innerHTML += `<div class="ward">${row[0]}, ${row[2]}, ${row[1]} Beds</div>`;
+                }
             });
         }
 
-        function listMajors() {
-            gapi.client.sheets.spreadsheets.values.get({
-                spreadsheetId: '1j1vRt47CWTPuQy7xxUBSQeN4GJrtfLaBFc6RTRvUne4',  // Replace with your spreadsheet ID
-                range: 'Sheet1!A2:D'
-            }).then(function(response) {
-                var range = response.result;
-                var maleWardsContainer = document.getElementById('male-wards');
-                var femaleWardsContainer = document.getElementById('female-wards');
-
-                maleWardsContainer.innerHTML = '';
-                femaleWardsContainer.innerHTML = '';
-
-                range.values.forEach(row => {
-                    if (row[3] === 'Male') {
-                        maleWardsContainer.innerHTML += `<div class="ward">${row[0]}, ${row[2]}, ${row[1]} Beds</div>`;
-                    } else if (row[3] === 'Female') {
-                        femaleWardsContainer.innerHTML += `<div class="ward">${row[0]}, ${row[2]}, ${row[1]} Beds</div>`;
-                    }
-                });
-            }, function(response) {
-                console.error('Error: ' + response.result.error.message);
-            });
-        }
-
-        document.addEventListener('DOMContentLoaded', handleClientLoad);
+        document.addEventListener('DOMContentLoaded', () => {
+            document.getElementById('authorize_button').onclick = handleAuthClick;
+            gapiLoaded();
+            gisLoaded();
+        });
     </script>
+
+    <!-- Add a button to initiate the authorization -->
+    <button id="authorize_button" style="visibility: hidden;">Authorize</button>
 </body>
 </html>
