--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://accounts.google.com/gsi/client" async defer></script>
+    <script src="https://apis.google.com/js/api.js" async defer onload="gapiLoaded()"></script>
 
     <script>
         var CLIENT_ID = '1058605601312-89fgoocsjd8mmdqq9vr5q1djt3o61d6f.apps.googleusercontent.com';  // Replace with your Client ID
@@ -129,7 +130,6 @@
 
         document.addEventListener('DOMContentLoaded', () => {
             document.getElementById('authorize_button').onclick = handleAuthClick;
-            gapiLoaded();
             gisLoaded();
         });
     </script>
