--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <script>
 async function fetchData() {
-    const response = await fetch('bed_data.csv');
+    const response = await fetch('./scraper/bed_data.csv');
     const data = await response.text();
     return data;
 }
